{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 38,
  "lineage": "0fc0b4ad-df23-8c49-b5e1-5e1999a91022",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:security-group/sg-0485931dba4414e87",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0485931dba4414e87",
            "ingress": [],
            "name": "boris-cluster-cluster-2025060711031276180000000c",
            "name_prefix": "boris-cluster-cluster-",
            "owner_id": "324037311587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boris-cluster-cluster"
            },
            "tags_all": {
              "Name": "boris-cluster-cluster",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:security-group/sg-0909206e801c02dd6",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0909206e801c02dd6",
            "ingress": [],
            "name": "boris-cluster-node-2025060711031275730000000b",
            "name_prefix": "boris-cluster-node-",
            "owner_id": "324037311587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boris-cluster-node",
              "kubernetes.io/cluster/boris-cluster": "owned"
            },
            "tags_all": {
              "Name": "boris-cluster-node",
              "app_name": "crm_demo",
              "kubernetes.io/cluster/boris-cluster": "owned",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1088417048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0485931dba4414e87",
            "security_group_rule_id": "sgr-07aaab5da6e36e116",
            "self": false,
            "source_security_group_id": "sg-0909206e801c02dd6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1093485764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-008d58eabca2fdeb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2988918528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-05bbee2f7719da3f7",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3878250858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-0523344bc86c0706e",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-778768124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-0c0c0df944a17925b",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1027027677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-06bf9a9956e0429fa",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1503002902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-03dc7b0fb18587a82",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-529229064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-00e251bc0a4a0ae93",
            "self": false,
            "source_security_group_id": "sg-0485931dba4414e87",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2173213041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-0a0b605fe0a008a69",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-450632153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-08e3788c6f08b829d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3196303926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0909206e801c02dd6",
            "security_group_rule_id": "sgr-0dc6057cbb65eba78",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints_addons",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "aws_observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:internet-gateway/igw-06d3991795df40383",
            "id": "igw-06d3991795df40383",
            "owner_id": "324037311587",
            "tags": {
              "Name": "boris-crm_demo-IGW"
            },
            "tags_all": {
              "Name": "boris-crm_demo-IGW",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:route-table/rtb-0b8cbaa8aa67a4e67",
            "id": "rtb-0b8cbaa8aa67a4e67",
            "owner_id": "324037311587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d3991795df40383",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "boris-crm_demo-RTB"
            },
            "tags_all": {
              "Name": "boris-crm_demo-RTB",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fe7a2d96925c968",
            "route_table_id": "rtb-0b8cbaa8aa67a4e67",
            "subnet_id": "subnet-0614c1f5f09672c9e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.internet",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059b57dfc4c2a6fbc",
            "route_table_id": "rtb-0b8cbaa8aa67a4e67",
            "subnet_id": "subnet-0719f7dcce589d9fa"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.internet",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:subnet/subnet-0614c1f5f09672c9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0614c1f5f09672c9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "324037311587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boris-crm_demo-SUBNET-0"
            },
            "tags_all": {
              "Name": "boris-crm_demo-SUBNET-0",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:subnet/subnet-0719f7dcce589d9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0719f7dcce589d9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "324037311587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boris-crm_demo-SUBNET-1"
            },
            "tags_all": {
              "Name": "boris-crm_demo-SUBNET-1",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            },
            "vpc_id": "vpc-07b065af0e2823873"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324037311587:vpc/vpc-07b065af0e2823873",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025573a817c3ba212",
            "default_route_table_id": "rtb-0a46f51932497c636",
            "default_security_group_id": "sg-0b25741374132aa4f",
            "dhcp_options_id": "dopt-085e60087d0ba7f62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b065af0e2823873",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a46f51932497c636",
            "owner_id": "324037311587",
            "tags": {
              "Name": "boris-crm_demo-VPC"
            },
            "tags_all": {
              "Name": "boris-crm_demo-VPC",
              "app_name": "crm_demo",
              "managedBy": "terraform",
              "owner": "boris",
              "usage": "pf_project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}